--- a/sass/includes/_main-wrap.sass
+++ b/sass/includes/_main-wrap.sass
@@ -36,7 +36,7 @@
 			a
 				text-decoration: underline
 
-		@media screen and (max-width: 670px)
+		@media screen and (max-width: 600px)
 			max-width: 50%
 
 		img
