--- a/sass/includes/_sok.sass
+++ b/sass/includes/_sok.sass
@@ -1,4 +1,6 @@
 #sok
+	padding: 0 5px
+
 	input[type="text"]
 		width: 100%
 		overflow: auto
@@ -13,3 +15,6 @@
 	input[type="text"]:focus, input[type="text"].focus
 		border-bottom: solid 2px #969696
 		outline: none
+
+#sok-info
+	padding: 25px 5px 0 5px
